fix aet status wrap and enlarge favorite icons

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+** {
   box-sizing: border-box;
 }
 
@@ -547,7 +547,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 19px;
+  font-size: 18px;
   line-height: 1;
   color: #ffffff;
 }
